--- a/kopiselir/package.json
+++ b/kopiselir/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "qrueno",
-  "version": "1.1.4",
-  
+  "name": "kopiselir",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
